[package]
name = "rawmay"
version = "0.1.0"
edition = "2024"

[dependencies]
itoa = "1"
bytes = "1"
httpdate = "1"
httparse = "1"
once_cell = "1"
may = { version = "0.3.46", default-features = false }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false
